# vocal

./: .gitignore  Cargo.toml  README.md  lefthook.yml  makefile
.github/workflows/: on-push.yaml
src/: logging.rs  main.rs  run.rs
src/audio/: graph.rs  information.rs  init.rs  mod.rs  player.rs  source_data.rs
src/display/: bar.rs  chart.rs  info.rs  input.rs  mod.rs  play_song.rs  runtime.rs  terminal.rs  text.rs  title.rs
src/events/: args.rs  audio_events.rs  event.rs  handler.rs  input.rs  mod.rs  player_events.rs  queue_events.rs  selection_events.rs  universal_events.rs
src/input/: args.rs  audio_keybindings.rs  config.rs  input.rs  key.rs  mod.rs  playback_keybindings.rs  player_keybindings.rs  queue_keybindings.rs  selection_keybindings.rs
src/instance/: audio_instance.rs  mod.rs  player.rs  queue.rs  queue_instance.rs  selection.rs  selection_instace.rs
src/properties/: audio_properties.rs  mod.rs  runtime_properties.rs
src/render/: chart.rs  colors.rs  footer.rs  info.rs  keybindings.rs  keys.rs  list.rs  mod.rs  play_song.rs
src/state/: audio_state.rs  handler.rs  mod.rs  runtime_state.rs
src/unicode/: codes.rs  colors.rs  mod.rs  render.rs
src/user_input/: args.rs  config.rs  input.rs  keybindings.rs  mod.rs
