[package]
name = "vocal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
crossterm = "0.25.0"
rand = "0.8.5"
rodio = "0.16.0"
termion = "2.0.1"
tui = "0.19.0"
