[package]
name = "vocal"
version = "1.0.0"
edition = "2021"
authors = ["Lucy Gschwantner lucygschwantner@gmail.com"]
license = "MIT"
description = "A configurable TUI player that plays audio and looks cool while during it"
repository = "https://github.com/jackboxx/vocal"
readme = "README.md"
keywords = ["audio", "cli", "music", "tui", "terminal"]
categories = ["command-line-interface", "command-line-utilities"]

[dependencies]
chrono = "0.4.23"
clap = { version = "4.1.1", features = ["derive"] }
confy = "0.5.1"
crossterm = "0.25.0"
log = "0.4.17"
rand = "0.8.5"
rodio = "0.16.0"
serde = "1.0.152"
serde_derive = "1.0.152"
simplelog = "0.12.0"
termion = "2.0.1"
tui = "0.19.0"
